# MAPLE-fep

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  build_docs.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: MATHEMATICAL_FOUNDATIONS.md  Makefile  conf.py  index.rst
docs/api/: dataset.rst  graph_analysis.rst  models.rst  utils.rst
docs/developer/: contributing.rst
docs/examples/: basic_usage.rst  fep_benchmark_tutorial.rst  parameter_sweeps.rst
docs/tutorials/: getting_started.html  getting_started.py  index.rst
docs/user_guide/: architecture.rst  installation.rst  parameter_optimization.rst  quickstart.rst  tutorials.rst
examples/: MAPLE_demo.ipynb  benchmark_all_datasets.py  parameter_optimization_example.py  performance_tracking_example.py  quick_performance_demo.py
examples/data/: Treeline_dataset_all_edges.csv  Treeline_dataset_no_bad_edges.csv  cmet-ddg.csv  cmet_benchmark.csv
src/maple/: __init__.py
src/maple/dataset/: FEP_benchmark_dataset.py  __init__.py  base_dataset.py  dataset.py  synthetic_dataset.py
src/maple/graph_analysis/: __init__.py  graph_cycle_analysis.py  graph_setup.py  performance_stats.py  plotting_performance.py
src/maple/models/: __init__.py  gaussian_markov_model.py  model_config.py  node_model.py  wcc_model.py
src/maple/utils/: __init__.py  parameter_sweep.py  performance_tracker.py
tests/: README.md  conftest.py  test_datasets.py  test_gmvi_model.py  test_graph_analysis.py  test_integration.py  test_model_config.py  test_node_model.py  test_parameter_sweep.py  test_performance_stats.py  test_performance_tracker.py  test_utils_integration.py
